--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,14 @@
+# Generated Cmake Pico project file
+
+cmake_minimum_required(VERSION 3.13)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# Initialise pico_sdk from installed location
+# (note this can come from environment, CMake cache etc)
+
 # == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
 if(WIN32)
     set(USERHOME $ENV{USERPROFILE})
@@ -14,58 +25,55 @@ endif()
 # ====================================================================================
 set(PICO_BOARD pico CACHE STRING "Board type")
 
-cmake_minimum_required(VERSION 3.13)
+# Pull in Raspberry Pi Pico SDK (must be before project)
+include(pico_sdk_import.cmake)
 
+project(s2rc C CXX ASM)
 
-include(cmake/pico_sdk_import.cmake)
-
-
-project(pico-controller-converter C CXX ASM)
-
-
+# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
+# Add executable. Default name is the project name, version 0.1
 
-add_executable(converter
+add_executable(s2rc
 src/main.c
-
 
 src/usb_host/usb_host_init.c
 src/usb_host/usb_host_drivers.c
 
-
 src/input/input_manager.c
 src/input/input_hid_generic.c
 
-
 src/output/output_switch.c
-
 
 src/mapping/mapper.c
 )
 
+pico_set_program_name(s2rc "s2rc")
+pico_set_program_version(s2rc "0.1")
 
-target_include_directories(converter PRIVATE
+# Modify the below lines to enable/disable output over UART/USB
+pico_enable_stdio_uart(s2rc 0)
+pico_enable_stdio_usb(s2rc 0)
+
+# Add the standard library to the build
+target_link_libraries(s2rc
+        pico_stdlib)
+
+# Add the standard include files to the build
+target_include_directories(s2rc PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+)
+
+pico_add_extra_outputs(s2rc)
+
+target_include_directories(s2rc PRIVATE
 ${CMAKE_CURRENT_LIST_DIR}/include
 ${CMAKE_CURRENT_LIST_DIR}/src
 )
 
-
-target_link_libraries(converter
+target_link_libraries(s2rc
 pico_stdlib
 tinyusb_device
 tinyusb_board
-pico_host_usb
-)
-
-
-pico_add_extra_outputs(converter)
-
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-
-pico_enable_stdio_usb(${PROJECT_NAME} 1)
-pico_enable_stdio_uart(${PROJECT_NAME} 0)
-
-target_sources(${PROJECT_NAME} PRIVATE
-    src/usb_host/input_hid_generic.c
 )
