--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake libxi-dev libx11-dev
+          sudo apt-get install -y build-essential cmake libxi-dev libx11-dev libudev-dev
       
       - name: Build controller_bridge
         run: |
