Fixing path multi build

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           mkdir release
           copy controller_bridge\build\bin\Release\controller_bridge.exe release\
+          copy controller_bridge\config\default_config.ini release\controller_bridge.ini
+          copy controller_bridge\README.md release\
       
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
@@ -53,7 +55,7 @@ jobs:
       - name: Package Linux Release
         run: |
           mkdir -p release
-          cp controller_bridge/build/controller_bridge release/
+          cp controller_bridge/bin/build/controller_bridge release/
           cp controller_bridge/config/default_config.ini release/controller_bridge.ini
           cp controller_bridge/README.md release/
           chmod +x release/controller_bridge
@@ -83,7 +85,7 @@ jobs:
       - name: Package macOS Release
         run: |
           mkdir -p release
-          cp controller_bridge/build/controller_bridge release/
+          cp controller_bridge/bin/build/controller_bridge release/
           cp controller_bridge/config/default_config.ini release/controller_bridge.ini
           cp controller_bridge/README.md release/
           chmod +x release/controller_bridge
