--- a/controller_bridge/config/default_config.ini
+++ b/controller_bridge/config/default_config.ini
@@ -23,6 +23,9 @@ update_rate_hz = 1000
 # Controller analog stick deadzone (0-100, default: 10)
 controller_deadzone = 10
 
+# XInput controller index (0-3)
+controller_index = 0
+
 [KeyBindings]
 # Keyboard bindings format: key = type:value
 #
